--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mc-rtc (1.1.0-1ubuntu1) unstable; urgency=medium
+
+  * Update upstream: see CHANGELOG.md
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Wed, 15 Jan 2020 14:46:31 +0800
+
 mc-rtc (1.0.1-1ubuntu1) unstable; urgency=medium
 
   * Update upstream: see CHANGELOG.md
