--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mc-rtc (1.2.0-1ubuntu1) unstable; urgency=medium
+
+  * Update upstream: see CHANGELOG.md
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Tue, 17 Mar 2020 16:54:53 +0800
+
 mc-rtc (1.1.0-1ubuntu1) unstable; urgency=medium
 
   * Update upstream: see CHANGELOG.md
