--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mc-rtc (1.5.1-1ubuntu1) unstable; urgency=medium
+
+  * Update upstream: see CHANGELOG.md
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Mon, 14 Sep 2020 15:03:14 +0800
+
 mc-rtc (1.5.0-1ubuntu1) unstable; urgency=medium
 
   * Update upstream: see CHANGELOG.md
