--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mc-rtc (1.6.0-1ubuntu1) unstable; urgency=medium
+
+  * Update upstream: see CHANGELOG.md
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Fri, 16 Oct 2020 17:59:05 +0800
+
 mc-rtc (1.5.1-1ubuntu1) unstable; urgency=medium
 
   * Update upstream: see CHANGELOG.md
