--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mc-rtc (1.8.1-1debian1) unstable; urgency=medium
+
+  * Update upstream: see CHANGELOG.md
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Tue, 10 Aug 2021 17:41:35 +0800
+
 mc-rtc (1.8.0-1debian1) unstable; urgency=medium
 
   * Update upstream: see CHANGELOG.md
