--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mc-rtc (1.8.2-1debian1) unstable; urgency=medium
+
+  * Update upstream: see CHANGELOG.md
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Fri, 15 Oct 2021 17:19:30 +0800
+
 mc-rtc (1.8.1-1debian1) unstable; urgency=medium
 
   * Update upstream: see CHANGELOG.md
