--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mc-rtc (1.9.0-1debian1) unstable; urgency=medium
+
+  * Update upstream: see CHANGELOG.md
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Thu, 10 Feb 2022 11:18:57 +0800
+
 mc-rtc (1.8.2-1debian1) unstable; urgency=medium
 
   * Update upstream: see CHANGELOG.md
