--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mc-rtc (1.10.0-1debian1) unstable; urgency=medium
+
+  * Update upstream: see CHANGELOG.md
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Wed, 06 Apr 2022 14:15:04 +0800
+
 mc-rtc (1.9.0-1debian1) unstable; urgency=medium
 
   * Update upstream: see CHANGELOG.md
