--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mc-rtc (1.11.0-1debian1) unstable; urgency=medium
+
+  * Update upstream: see CHANGELOG.md
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Fri, 08 Jul 2022 15:51:12 +0200
+
 mc-rtc (1.10.0-1debian1) unstable; urgency=medium
 
   * Update upstream: see CHANGELOG.md
