--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mc-rtc (1.12.0-1debian1) unstable; urgency=medium
+
+  * Update upstream: see CHANGELOG.md
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Wed, 07 Sep 2022 07:44:21 +0900
+
 mc-rtc (1.11.0-1debian1) unstable; urgency=medium
 
   * Update upstream: see CHANGELOG.md
