--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mc-rtc (1.13.0-1debian1) unstable; urgency=medium
+
+  * Update upstream: see CHANGELOG.md
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Sun, 16 Oct 2022 11:00:47 +0900
+
 mc-rtc (1.12.0-1debian1) unstable; urgency=medium
 
   * Update upstream: see CHANGELOG.md
