--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mc-rtc (1.14.0-1debian1) unstable; urgency=medium
+
+  * Update upstream: see CHANGELOG.md
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Tue, 29 Nov 2022 10:03:37 +0900
+
 mc-rtc (1.13.0-1debian1) unstable; urgency=medium
 
   * Update upstream: see CHANGELOG.md
