--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mc-rtc (1.14.1-1debian1) unstable; urgency=medium
+
+  * Update upstream: see CHANGELOG.md
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Thu, 01 Dec 2022 18:13:39 +0900
+
 mc-rtc (1.14.0-1debian1) unstable; urgency=medium
 
   * Update upstream: see CHANGELOG.md
