--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mc-rtc (1.14.2-1debian1) unstable; urgency=medium
+
+  * Update upstream: see CHANGELOG.md
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Tue, 06 Dec 2022 09:10:16 +0900
+
 mc-rtc (1.14.1-1debian1) unstable; urgency=medium
 
   * Update upstream: see CHANGELOG.md
