--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mc-rtc (2.1.0-1debian1) unstable; urgency=medium
+
+  * Upstream update: see CHANGELOG.md
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Wed, 25 Jan 2023 16:57:45 +0900
+
 mc-rtc (2.0.1-1debian1) unstable; urgency=medium
 
   * Upstream update: see CHANGELOG.md
